visitor hubs update

--- a/tdc.css
+++ b/tdc.css
@@ -104,6 +104,12 @@ background-color: #555555;
     font-size: 10px;
     color:white;
 }
+.sub-title-4{
+    text-align: start;
+    height:20px;
+    font-size: 10px;
+    color:white;
+}
   .LegendTitle{
       vertical-align:bottom;
       font-size:9px;
