--- a/tdc.css
+++ b/tdc.css
@@ -244,14 +244,38 @@ body{
     width: 1px;
     background-color: white;
   }
-  .h-title{
-    padding-left: 115px;
-  }
+
   .h-title p {
     margin: 0px !important;
+    font-size: 11px;
   }
   .rightAxisLabel {
     float: right;
+  }
+  .v-title{
+      position: relative;
+      top: 68px;
+      margin-right: 10px;
+    height:335px;
+    width: 20px;
+    border-right: 1px solid white;
+  }
+  .v-title p{
+    font-size: 11px;
+  }
+  .topAxisLabel{
+    position:relative;
+    left:-50px;
+    top:50px;
+    width:122px;
+    transform: rotate(-90deg);
+  }
+  .bottomAxisLabel{
+    position:relative;
+    left:-50px;
+    top:245px;
+    width:122px;
+    transform: rotate(-90deg);
   }
 #pivotTable table td :nth-child(n+3){  /* this will go to the 2nd column of a table directly */
 
