--- a/tdc.css
+++ b/tdc.css
@@ -250,11 +250,12 @@ body{
     font-size: 11px;
   }
   .rightAxisLabel {
+    padding-right:2px;
     float: right;
   }
   .v-title{
       position: relative;
-      top: 68px;
+      top: 58px;
       margin-right: 10px;
     height:335px;
     width: 20px;
@@ -418,6 +419,9 @@ button:focus { outline:0 !important; }
     font-size: 30px;
 }
 /* qlik visulaization overrides*/
+.qv-object-text-image .qv-media-tool-editor, .qv-object-text-image .qv-media-tool-html{
+    line-height: 1 !important;
+}
 span.chart-data-title-label.ng-binding {
     color: white !important;
 }
