--- a/tdc.css
+++ b/tdc.css
@@ -179,7 +179,7 @@ background-color: #555555;
     width:50px!important
     }
     th.cell.ng-scope.header.top {
-        font-size: 11px;
+        font-size: 1.4rem;
     }
     
     #QV-51 .qv-pt .cell.header.left {
